--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "postcss-import": "^15.1.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "~5.0.2"
   }
 }
